[package]
name = "fts_lsp_pdb_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
capstone = "0.12.0"
goblin = "0.8.2"
lsp-server = "0.7"
lsp-types = "0.89"
normpath = "1.2.0"
pdb = "0.8.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
symbolic = { version = "12.10.0", features = ["symcache"] }
url = "2.5.0"
self_cell = "1.0.4"
itertools = "0.13.0"
